--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,13 @@
 *.class
 
 *.class
+
+Bluetooth_Connector/src/.DS_Store
+
+Plugins/.DS_Store
+
+.DS_Store
+
+Bluetooth_Connector/.DS_Store
+
+Bluetooth_Connector/src/.DS_Store
